tests/ok/string-escapes.ari
fn main() -> i64 {
  println("A\n\t\r\a\b\f\v\\\"\'\?\x21\u0041\U00000042\u{1F600}\0123");
  return 0;
}
