tests/errors/string-invalid-unicode-escape.ari
fn main() -> i64 {
  println("\uD800");
  return 0;
}
